<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context="com.redstar.zolotov.languagers.Activitys.MainActivity"
        android:orientation="vertical">

    <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/learn_new_words"
            android:onClick="PressKey"
            android:id="@+id/learn_key"/>

    <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/learn_words"
            android:onClick="PressKey"
            android:id="@+id/memo_key"/>

    <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/savanna"
            android:onClick="PressKey"
            android:id="@+id/savanna_game"/>

    <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/new_words"
            android:onClick="PressKey"
            android:id="@+id/new_words_key"/>

    <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/know_words"
            android:onClick="PressKey"
            android:id="@+id/learn_words_key"/>

</LinearLayout>
