<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <TextView
                    android:text="@string/learn_word"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:id="@+id/textView3"
                    android:textSize="15sp"/>

            <TextView
                    android:text="@string/new_words_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView4"
                    android:textSize="14sp"
                    android:layout_alignBaseline="@+id/text_words_of_day"
                    android:layout_alignBottom="@+id/text_words_of_day"
                    android:layout_toLeftOf="@+id/text_words_of_day"
                    android:layout_toStartOf="@+id/text_words_of_day"/>
            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:text=""
                    android:ems="10"
                    android:layout_below="@+id/textView3"
                    android:layout_toRightOf="@+id/textView3"
                    android:layout_toEndOf="@+id/textView3"
                    android:id="@+id/text_words_of_day"/>

            <TextView
                    android:text="@string/days_of_words"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView5"
                    android:layout_alignBaseline="@+id/text_day_of_words"
                    android:layout_alignBottom="@+id/text_day_of_words"
                    android:layout_toLeftOf="@+id/text_day_of_words"
                    android:layout_toStartOf="@+id/text_day_of_words"
                    android:textSize="14sp" />
            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:text=""
                    android:ems="10"
                    android:layout_below="@+id/text_words_of_day"
                    android:layout_alignLeft="@+id/text_words_of_day"
                    android:layout_alignStart="@+id/text_words_of_day"
                    android:id="@+id/text_day_of_words"/>

            <TextView
                    android:text="@string/savanna"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView6"
                    android:textSize="15sp"
                    android:layout_below="@+id/text_day_of_words"
                    android:layout_centerHorizontal="true"/>

            <TextView
                    android:text="@string/words_of_game"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView7"
                    android:layout_alignBaseline="@+id/text_savanna_words"
                    android:layout_alignBottom="@+id/text_savanna_words"
                    android:layout_toLeftOf="@+id/text_savanna_words"
                    android:layout_toStartOf="@+id/text_savanna_words"/>
            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:text=""
                    android:ems="10"
                    android:id="@+id/text_savanna_words"
                    android:layout_below="@+id/textView6"
                    android:layout_alignLeft="@+id/text_day_of_words"
                    android:layout_alignStart="@+id/text_day_of_words"/>

            <TextView
                    android:text="@string/hp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView8"
                    android:layout_alignBaseline="@+id/text_savanna_hp"
                    android:layout_alignBottom="@+id/text_savanna_hp"
                    android:layout_toLeftOf="@+id/text_savanna_hp"
                    android:layout_toStartOf="@+id/text_savanna_hp"
                    android:textSize="14sp"/>
            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:text=""
                    android:ems="10"
                    android:layout_below="@+id/text_savanna_words"
                    android:layout_alignLeft="@+id/text_savanna_words"
                    android:layout_alignStart="@+id/text_savanna_words"
                    android:id="@+id/text_savanna_hp"/>

            <TextView
                    android:text="@string/delay_setting"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView9"
                    android:layout_alignBaseline="@+id/text_savanna_delay"
                    android:layout_alignBottom="@+id/text_savanna_delay"
                    android:layout_toLeftOf="@+id/text_savanna_delay"
                    android:layout_toStartOf="@+id/text_savanna_delay"
                    android:textSize="14sp"/>
            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:text=""
                    android:layout_below="@+id/text_savanna_hp"
                    android:layout_alignLeft="@+id/text_savanna_hp"
                    android:layout_alignStart="@+id/text_savanna_hp"
                    android:id="@+id/text_savanna_delay"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"/>
        </RelativeLayout>
    </ScrollView>
</LinearLayout>