<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
    <TextView
            android:text=""
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="0dp"
            android:textSize="35sp"
            android:id="@+id/word"/>

    <!--<GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="2"
            android:background="@color/colorBlack"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">

        <Button
                android:text=""
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/button_1"
                android:layout_marginBottom="0dp"
                android:layout_row="0"
                android:layout_column="0"
                android:layout_columnSpan="1"
                android:layout_columnWeight="1"
                android:layout_gravity="fill_horizontal"
                android:textSize="15sp"
                android:onClick="PressKey"/>


        <Button
                android:text=""
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/button_2"
                android:layout_marginBottom="0dp"
                android:layout_row="0"
                android:layout_column="1"
                android:layout_columnSpan="1"
                android:layout_columnWeight="1"
                android:layout_gravity="fill_horizontal"
                android:textSize="15sp"
                android:onClick="PressKey"/>

        <Button
                android:text=""
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/button_3"
                android:layout_marginBottom="0dp"
                android:layout_row="1"
                android:layout_column="0"
                android:layout_columnSpan="1"
                android:layout_columnWeight="1"
                android:layout_gravity="fill_horizontal"
                android:textSize="15sp"
                android:onClick="PressKey"/>


        <Button
                android:text=""
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/button_4"
                android:layout_marginBottom="0dp"
                android:layout_row="1"
                android:layout_column="1"
                android:layout_columnSpan="1"
                android:layout_columnWeight="1"
                android:layout_gravity="fill_horizontal"
                android:textSize="15sp"
                android:onClick="PressKey"/>
    </GridLayout>-->

    <TableLayout android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_alignParentBottom="true"
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentStart="true"
                 android:background="@color/colorBlack">
        <TableRow>
            <Button
                    android:text=""
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:id="@+id/button_1"
                    android:layout_marginBottom="0dp"
                    android:layout_gravity="fill_horizontal"
                    android:textSize="15sp"
                    android:onClick="PressKey"/>

            <Button
                    android:text=""
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:id="@+id/button_2"
                    android:layout_marginBottom="0dp"
                    android:layout_gravity="fill_horizontal"
                    android:textSize="15sp"
                    android:onClick="PressKey"/>
        </TableRow>

        <TableRow>
            <Button
                    android:text=""
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:id="@+id/button_3"
                    android:layout_marginBottom="0dp"
                    android:layout_gravity="fill_horizontal"
                    android:textSize="15sp"
                    android:onClick="PressKey"/>

            <Button
                    android:text=""
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:id="@+id/button_4"
                    android:layout_marginBottom="0dp"
                    android:layout_gravity="fill_horizontal"
                    android:textSize="15sp"
                    android:onClick="PressKey"/>
        </TableRow>
    </TableLayout>

    <TextView
            android:text=""
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/toast"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:textSize="50sp"/>
    <Button
            android:text="@string/start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/toast"
            android:layout_centerHorizontal="true"
            android:id="@+id/button_start"
            android:onClick="PressKey"/>
    <TextView
            android:text="@string/words"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_hp"
            android:id="@+id/text_words"/>
    <TextView
            android:text="@string/hp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/text_hp"
            android:layout_alignParentTop="true"
            android:layout_alignRight="@+id/text_words"
            android:layout_alignEnd="@+id/text_words"/>
    <TextView
            android:text=""
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/text_words"
            android:layout_toRightOf="@+id/text_hp"
            android:layout_toEndOf="@+id/text_hp"
            android:id="@+id/text_hp_count"/>
    <TextView
            android:text=""
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/text_words"
            android:layout_toRightOf="@+id/text_words"
            android:layout_toEndOf="@+id/text_words"
            android:id="@+id/text_words_count"/>
</RelativeLayout>